welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:12: error: Unmatched closing brace '}' ignored here
    		}else{gauche()}
                ^ZigZag:12: error: ';' expected but 'else' found.
    		}else{gauche()}
                 ^ZigZag:51: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:54: error: expected start of definition
	override def forward()  {
                 ^ZigZag:57: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:60: error: expected start of definition
	override def backward() {
                 ^ZigZag:63: error: Unmatched closing brace '}' ignored here
}
^